Clean root navigation links

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <li role="none"><a href="#accueil" role="menuitem">Accueil</a></li>
                 <li role="none"><a href="#services" role="menuitem">Services</a></li>
                 <li role="none"><a href="#apropos" role="menuitem">À propos</a></li>
-                <li role="none"><a href="blog.html" role="menuitem">Blog</a></li>
+                <li role="none"><a href="/blog.html" role="menuitem">Blog</a></li>
                 <li role="none"><a href="#temoignages" role="menuitem">Témoignages</a></li>
                 <li role="none"><a href="#portfolio" role="menuitem">Réalisations</a></li>
                 <li role="none"><a href="#faq" role="menuitem">FAQ</a></li>
@@ -318,7 +318,7 @@
                     <p class="blog-preview-text">
                         La visibilité locale est aujourd'hui l'un des facteurs les plus importants pour attirer des clients. Découvrez comment optimiser votre présence digitale locale avec Google Business Profile, le SEO local et les avis clients.
                     </p>
-                    <a href="blog.html" class="blog-preview-link">
+                    <a href="/blog.html" class="blog-preview-link">
                         Lire l'article
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="margin-left: 0.5rem;">
                             <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -589,7 +589,7 @@
                         <li><a href="#accueil">Accueil</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#apropos">À propos</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blog.html">Blog</a></li>
                         <li><a href="#temoignages">Témoignages</a></li>
                         <li><a href="#portfolio">Réalisations</a></li>
                         <li><a href="#faq">FAQ</a></li>
