--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -26,17 +26,17 @@
     <nav class="navbar" role="navigation" aria-label="Navigation principale">
         <div class="container">
             <div class="nav-brand">
-                <a href="index.html" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
+                <a href="/" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
                     <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
                     <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
             <ul class="nav-menu" role="menubar">
-                <li role="none"><a href="index.html#accueil" role="menuitem">Accueil</a></li>
-                <li role="none"><a href="index.html#services" role="menuitem">Services</a></li>
-                <li role="none"><a href="index.html#apropos" role="menuitem">À propos</a></li>
-                <li role="none"><a href="blog.html" role="menuitem">Blog</a></li>
-                <li role="none"><a href="index.html#contact" role="menuitem">Contact</a></li>
+                <li role="none"><a href="/#accueil" role="menuitem">Accueil</a></li>
+                <li role="none"><a href="/#services" role="menuitem">Services</a></li>
+                <li role="none"><a href="/#apropos" role="menuitem">À propos</a></li>
+                <li role="none"><a href="/blog.html" role="menuitem">Blog</a></li>
+                <li role="none"><a href="/#contact" role="menuitem">Contact</a></li>
             </ul>
             <button class="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="nav-menu">
                 <span aria-hidden="true"></span>
@@ -189,7 +189,7 @@
                     <div class="cta-text">
                         N'hésitez pas à nous contacter pour toute question concernant notre site ou nos services.
                     </div>
-                    <a href="index.html#contact" class="cta-button">
+                    <a href="/#contact" class="cta-button">
                         Nous contacter
                     </a>
                 </div>
@@ -207,11 +207,11 @@
                 <div class="footer-links">
                     <h4>Liens rapides</h4>
                     <ul>
-                        <li><a href="index.html#accueil">Accueil</a></li>
-                        <li><a href="index.html#services">Services</a></li>
-                        <li><a href="index.html#apropos">À propos</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="/#accueil">Accueil</a></li>
+                        <li><a href="/#services">Services</a></li>
+                        <li><a href="/#apropos">À propos</a></li>
+                        <li><a href="/blog.html">Blog</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
