--- a/merci.html
+++ b/merci.html
@@ -12,7 +12,7 @@
     <p style="max-width: 640px; margin: 0 auto 24px;">
       Nous revenons vers vous sous 24 à 48h ouvrées.
     </p>
-    <a href="index.html" style="display:inline-block; padding:12px 18px; border-radius:10px; text-decoration:none; border:1px solid #ccc;">
+    <a href="/" style="display:inline-block; padding:12px 18px; border-radius:10px; text-decoration:none; border:1px solid #ccc;">
       Retour au site
     </a>
   </main>
