--- a/blog.html
+++ b/blog.html
@@ -46,20 +46,20 @@
     <nav class="navbar" role="navigation" aria-label="Navigation principale">
         <div class="container">
             <div class="nav-brand">
-                <a href="index.html" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
+                <a href="/" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
                     <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
                     <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
             <ul class="nav-menu" role="menubar">
-                <li role="none"><a href="index.html#accueil" role="menuitem">Accueil</a></li>
-                <li role="none"><a href="index.html#services" role="menuitem">Services</a></li>
-                <li role="none"><a href="index.html#apropos" role="menuitem">À propos</a></li>
-                <li role="none"><a href="blog.html" role="menuitem" aria-current="page">Blog</a></li>
-                <li role="none"><a href="index.html#temoignages" role="menuitem">Témoignages</a></li>
-                <li role="none"><a href="index.html#portfolio" role="menuitem">Réalisations</a></li>
-                <li role="none"><a href="index.html#faq" role="menuitem">FAQ</a></li>
-                <li role="none"><a href="index.html#contact" role="menuitem">Contact</a></li>
+                <li role="none"><a href="/#accueil" role="menuitem">Accueil</a></li>
+                <li role="none"><a href="/#services" role="menuitem">Services</a></li>
+                <li role="none"><a href="/#apropos" role="menuitem">À propos</a></li>
+                <li role="none"><a href="/blog.html" role="menuitem" aria-current="page">Blog</a></li>
+                <li role="none"><a href="/#temoignages" role="menuitem">Témoignages</a></li>
+                <li role="none"><a href="/#portfolio" role="menuitem">Réalisations</a></li>
+                <li role="none"><a href="/#faq" role="menuitem">FAQ</a></li>
+                <li role="none"><a href="/#contact" role="menuitem">Contact</a></li>
             </ul>
             <button class="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="nav-menu">
                 <span aria-hidden="true"></span>
@@ -174,7 +174,7 @@
                         les <strong>indépendants</strong> pour transformer leur présence locale
                         en véritable levier de croissance.
                     </div>
-                    <a href="index.html#contact" class="cta-button">
+                    <a href="/#contact" class="cta-button">
                         Demander un mini-diagnostic
                         <span>↗</span>
                     </a>
