--- a/index.html
+++ b/index.html
@@ -72,8 +72,14 @@
     <nav class="navbar" role="navigation" aria-label="Navigation principale">
         <div class="container">
             <div class="nav-brand">
-                <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
-                <span class="brand-name">VisiNet Conseil</span>
+                <a href="/" aria-label="Retour à l'accueil">
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png"
+                         alt="VisiNet Conseil - Logo"
+                         class="logo"
+                         width="40"
+                         height="40">
+                    <span class="brand-name">VisiNet Conseil</span>
+                </a>
             </div>
             <ul class="nav-menu" id="nav-menu" role="menubar">
                 <li role="none"><a href="#accueil" role="menuitem">Accueil</a></li>
@@ -85,7 +91,11 @@
                 <li role="none"><a href="#faq" role="menuitem">FAQ</a></li>
                 <li role="none"><a href="#contact" role="menuitem">Contact</a></li>
             </ul>
-            <button class="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="nav-menu">
+            <button class="menu-toggle"
+                    type="button"
+                    aria-label="Ouvrir le menu"
+                    aria-expanded="false"
+                    aria-controls="nav-menu">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
