--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -26,19 +26,30 @@
     <nav class="navbar" role="navigation" aria-label="Navigation principale">
         <div class="container">
             <div class="nav-brand">
-                <a href="/" aria-label="Retour à l'accueil" style="display: flex; align-items: center; gap: 0.75rem; text-decoration: none;">
-                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png" alt="VisiNet Conseil - Logo" class="logo" width="40" height="40">
+                <a href="/" aria-label="Retour à l'accueil">
+                    <img src="VisiNet_C_Logo_HD haute résolution (300 dpi), - Copie.png"
+                         alt="VisiNet Conseil - Logo"
+                         class="logo"
+                         width="40"
+                         height="40">
                     <span class="brand-name">VisiNet Conseil</span>
                 </a>
             </div>
-            <ul class="nav-menu" role="menubar">
+            <ul class="nav-menu" id="nav-menu" role="menubar">
                 <li role="none"><a href="/#accueil" role="menuitem">Accueil</a></li>
                 <li role="none"><a href="/#services" role="menuitem">Services</a></li>
                 <li role="none"><a href="/#apropos" role="menuitem">À propos</a></li>
                 <li role="none"><a href="/blog.html" role="menuitem">Blog</a></li>
+                <li role="none"><a href="/#temoignages" role="menuitem">Témoignages</a></li>
+                <li role="none"><a href="/#portfolio" role="menuitem">Réalisations</a></li>
+                <li role="none"><a href="/#faq" role="menuitem">FAQ</a></li>
                 <li role="none"><a href="/#contact" role="menuitem">Contact</a></li>
             </ul>
-            <button class="menu-toggle" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="nav-menu">
+            <button class="menu-toggle"
+                    type="button"
+                    aria-label="Ouvrir le menu"
+                    aria-expanded="false"
+                    aria-controls="nav-menu">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
